# notes-server

./: Cargo.toml  LICENSE  README.md
migrations/2018-09-19-052115_create_classes/: down.sql  up.sql
src/: classes.rs  main.rs  schema.rs
